fix overlap

--- a/src/css/components/card-list.styl
+++ b/src/css/components/card-list.styl
@@ -7,8 +7,8 @@
   margin-bottom: calc(var(--body-padding)*2)
 
   h2
-    margin-bottom: 0
-    padding: 15px 0
+    margin-bottom: 5px
+    padding: 12px 0
     position: sticky
     top: 0
     scroll-margin-top: 20px
